<resources>
    <string name="app_name">聊天程序</string>
    <string name="password">密  码</string>
    <string name="user">用户名</string>
    <string name="login_now">现在登录</string>
    <string name="login_later">稍后登录</string>
    <string name="register">没有账号，现在注册</string>
    <string name="forget_password">忘记密码，这里找回</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="talking">当前会话对象</string>
    <string name="send">发送</string>
    <string name="test_user">测试用户</string>
</resources>
